src/test/resources/valid/Invariant4.sc
/* (c) https://github.com/MontiCore/monticore */
statechart Invariant4 {
  state Foo [Person.age > 3];
}