src/test/resources/invalid/InvalidSCName.sc
/* (c) https://github.com/MontiCore/monticore */

statechart InvalidName {
  initial state A;
}